--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <link rel="icon" sizes="192x192" href="/icon-192.png" type="image/png"/>
+    <link rel="shortcut icon" href="/icon-32.png" type="image/png"/>
+    <link rel="apple-touch-icon" href="/icon-180.png" type="image/png"/>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Moon Wallet</title>
   </head>
   <body>
     <div id="root"></div>
